2nd round for CRM